updata&delete error URL

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -29,5 +29,5 @@ zwz6666:
   page:
     permalink: '/me'
   socials:
-    luogu: zwz6666
+    luogu: https://luogu.com.cn/user/1053876
     github: CN-zwz
