--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -1,8 +1,3 @@
-facebook:
-  label: Facebook
-  permalink: /facebook
-  description: Facebook tag description
-
 hello:
   label: Hello
   permalink: /hello
@@ -13,7 +8,12 @@ docusaurus:
   permalink: /docusaurus
   description: Docusaurus tag description
 
-hola:
-  label: Hola
-  permalink: /hola
-  description: Hola tag description
+luogu:
+  label: Luogu
+  permalink: /Luogu-tag
+  description: 洛谷文章标签，与洛谷有关的文章或者是从洛谷搬过来的一般都会加上这个标签。
+
+solution:
+  label: solution
+  permalink: /solution
+  description: 题解，主要是洛谷上的。
