--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "钟·苦乐交织",
-  "version": "1.1.0",
+  "name": "zhong-bittersweet",
+  "version": "1.1.1",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
