--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "gh-pages": "GIT_USER=CN-zwz USE_SSH=true npm run deploy"
+    "gh-pages": "GIT_USER=CN-zwz USE_SSH=true npm run deploy",
+    "deploy:rth": "npx -y rth-host-helper@latest --site docs4.zhongwz.top --build build --outdir build"
   },
   "dependencies": {
     "@docusaurus/core": "3.7.0",
