--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/plugin-content-docs": "^3.8.0",
     "@docusaurus/preset-classic": "^3.8.0",
     "@mdx-js/react": "^3.0.0",
+    "@waline/client": "^3.5.7",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
