--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zhong-bittersweet",
-  "version": "1.2.2",
+  "version": "1.2.3 beta",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
